tests/ui/unknown_attribute.stderr
error: Unknown attribute `fail`
 --> tests/ui/unknown_attribute.rs:3:11
  |
3 | #[command(fail)]
  |           ^^^^
