tests/ui/unknown_attribute.rs
use bevy_commandify::*;

#[command(fail)]
fn foo(world: &mut World) { }

fn main() { }